# raf-deploy

./: .gitignore  config.yaml
install/: local_setup.sh  setup.sh
install/perception/share/perception/: package.sh  package.xml
install/raf_interfaces/share/raf_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/raf_interfaces/share/raf_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_raf_interfaces__rosidl_generator_cppExport.cmake  (+11 more)
install/raf_kinova_controller/lib/raf_kinova_controller/: kinova_controller
install/raf_kinova_controller/share/raf_kinova_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/kortex_controller/: CMakeLists.txt
src/kortex_controller/scripts/: autonomous_checker.py  orchestrator.py  robot_controller_ros2.py
src/kortex_controller/src/: controller.cpp
src/perception/: package.xml  setup.py
src/perception/perception/: perception_node.py
src/perception/prompts/: identification.txt
src/raf_bringup/: package.xml
src/raf_bringup/launch/: raf_system.launch.py
src/raf_interfaces/: CMakeLists.txt  package.xml
src/raf_interfaces/srv/: SetTwist.srv
src/raf_kinova_controller/: package.xml  setup.cfg  setup.py
src/raf_kinova_controller/launch/: controller.launch.py
src/raf_kinova_controller/raf_kinova_controller/: kortex_api_utils.py
(+52 files in other folders)
